--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>THis is Heading</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, alias! Accusamus adipisci inventore atque veritatis amet, ab officiis possimus provident. Voluptas possimus ad inventore quaerat, dolorum mollitia, omnis ducimus reiciendis eaque repudiandae veniam tenetur, minima dolor quod atque numquam nesciunt!</p>
     
 </body>
