--- a/index.html
+++ b/index.html
@@ -9,8 +9,53 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>THis is Heading</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis, alias! Accusamus adipisci inventore atque veritatis amet, ab officiis possimus provident. Voluptas possimus ad inventore quaerat, dolorum mollitia, omnis ducimus reiciendis eaque repudiandae veniam tenetur, minima dolor quod atque numquam nesciunt!</p>
+<section class="container clear">
+    <div class="half-width">
+        <h2>Hello I'm</h2>
+        <h2 class="red-highlight">Jack Smith</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, officiis dolor at enim a voluptatem.</p>
+        <p><a class="red-button" href="#" target="_blank" rel="noopener noreferrer">HIRE ME</a> </p>
+    </div>
+    <div class="half-width">
+        <img class="intro-image" src="images/peter.png" alt="">
+    </div>
+</section>
+
+
+<section class="container clear">
+    <div class="half-width">
+        <img class="intro-image" src="images/peter_dream.png" alt="">
+    </div>
+    <div class="half-width">
+        <h2>Biography</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, voluptas ab! Et placeat molestias veniam repudiandae. Voluptas, sit!</p>
+        <p><a class="red-button" href="#" target="_blank" rel="noopener noreferrer">DOWNLOAD CV</a> </p>
+    </div>
+</section>
+
+<section class="container clear third-center m-auto">
+    <h1 class="text-center">My Latest Work</h1>
+    <div class="third-box"><img src="images/latest-work/work-1.png" alt="" class="third-img"></div>
+    <div class="third-box"><img src="images/latest-work/work-2.jpg" alt="" class="third-img"></div>
+    <div class="third-box"><img src="images/latest-work/work-3.jpg" alt="" class="third-img"></div>
+</section>
+
+<section class="conatiner clear text-center">
+    <div class="client-are">
+        <h1 class="clear">What Client are say</h1>
+        <h3>Bruce Moccy</h3>
+        <h5 class="color-gray">Founder & CEO Alies</h5>
+        <p class="p-area m-auto">"Lorem ipsum atam voluptatum dolor, sit amet consectetur adipisicing elit. vero similique  doloremque maiores!"</p>
+    </div>
+    <div class="clear"></div>
+    <div class="contact-area m-auto">
+        <p>Love me a Message in the</p>
+        <h4>example@gmail.com</h4>
+    </div>
+</section>
+<footer class="clear container text-center">
+    <p class="color-gray">JOY Chandra Roy &copy; All Rights Reserved</p>
+</footer>
     
 </body>
 </html>
