--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     </div>
 </section>
 
+<div class="clear"></div>
+<div class="clear"></div>
+<div class="clear"></div>
 
 <section class="container clear">
     <div class="half-width">
@@ -32,6 +35,8 @@
         <p><a class="red-button" href="#" target="_blank" rel="noopener noreferrer">DOWNLOAD CV</a> </p>
     </div>
 </section>
+
+<div class="clear"></div>
 
 <section class="container clear third-center m-auto">
     <h1 class="text-center">My Latest Work</h1>
