--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <img class="intro-image" src="images/peter_dream.png" alt="">
     </div>
     <div class="half-width">
+        <div class="clear"></div>
+        <div class="clear"></div>
         <h2>Biography</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum, voluptas ab! Et placeat molestias veniam repudiandae. Voluptas, sit!</p>
         <p><a class="red-button" href="#" target="_blank" rel="noopener noreferrer">DOWNLOAD CV</a> </p>
